# sdf-wot-converter-demo

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
static/: index.html
templates/: base.html.tera  index.html.tera  macros.html.tera
templates/error/: 404.html.tera
